--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -43,18 +43,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 58,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 7, 3, 6, 0, 12]\n"
+     ]
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L=[9, 7, 3, 6, 0]\n",
     "\n",
+    "def insertion_tableau(L, V, i):\n",
+    "\n",
+    "    if i < 0 or i > len(L):\n",
+    "        return\n",
+    "    \n",
+    "    U=[]\n",
+    "\n",
+    "    for k in range(0, i):\n",
+    "        U.append(L[k])\n",
+    "    U.append(V)\n",
+    "\n",
+    "    for k in range(i, len(L)):\n",
+    "        U.append(L[k])\n",
+    "\n",
+    "    print(U) \n",
+    "\n",
+    "\n",
+    "\n",
+    "def ins(l,i,v):\n",
+    "    if i < 0 or i > len(l):\n",
+    "        return\n",
+    "    \n",
+    "    l.append(v)\n",
+    "    j = len(l)-1\n",
+    "    while j >i:\n",
+    "        L[j] = L[j] - 1\n",
+    "        j += 1\n",
+    "    L.append(v)\n",
+    "\n",
+    "    return l\n",
+    "\n",
+    "\n",
+    "insertion_tableau(L, 12, 5)\n",
+    "ins(L, 12, 5)\n",
     "\n"
    ]
   },
@@ -83,7 +123,7 @@
     ]
    },
    "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
+    "**Réponse :** Écrire votre réponse ici. complexité de \"n\"\n",
     "\n",
     "\n"
    ]
@@ -113,11 +153,37 @@
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 7, 3, 0]"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L=[9, 7, 3, 6, 0]\n",
+    "\n",
+    "def insertion_tableau(L, i):\n",
+    "\n",
+    "    if i < 0 or i > len(L)-1:\n",
+    "        return\n",
+    "    \n",
+    "    U=[]\n",
+    "\n",
+    "    for k in range(0, i):\n",
+    "        U.append(L[k])\n",
+    "\n",
+    "    for k in range(i, len(L)-1):\n",
+    "        U.append(L[k+1])\n",
+    "\n",
+    "    return U \n",
+    "\n",
+    "insertion_tableau(L, 3)\n",
     "\n",
     "\n"
    ]
@@ -147,7 +213,7 @@
     ]
    },
    "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
+    "**Réponse :** Écrire votre réponse ici. c'est \"n\"\n",
     "\n",
     "\n"
    ]
@@ -182,17 +248,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 42,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[9, 7, 3, 6, 0]"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L= [9, 7, 3, 6, 0]\n",
+    "O= []\n",
+    "\n",
+    "def insertion_tableau(L):\n",
+    "    \n",
+    "    U=[]\n",
+    "\n",
+    "    for k in range(0, len(L)):\n",
+    "        U.append(L[k])\n",
+    "    return U \n",
+    "\n",
+    "insertion_tableau(L)\n",
     "\n",
     "\n"
    ]
@@ -222,7 +308,7 @@
     ]
    },
    "source": [
-    "**Réponse :** Écrire votre réponse ici.\n",
+    "**Réponse :** Écrire votre réponse ici. c'est une complexité de \"n\"\n",
     "\n",
     "\n"
    ]
@@ -285,19 +371,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 81,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-5"
+      ]
+     },
+     "execution_count": 81,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "test= [2,-5,0,9]\n",
     "\n",
-    "\n"
+    "def minimumt(L):\n",
+    "\n",
+    "    U= L[0]\n",
+    "\n",
+    "    for i in range(0, len(L)-1):\n",
+    "        if L[i]< U:\n",
+    "            U=L[i]\n",
+    "    \n",
+    "    return U\n",
+    "minimumt(test)\n"
    ]
   },
   {
@@ -315,17 +419,49 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 83,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-5] [2, 0, 9]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "([-5], [2, 0, 9])"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "test= [2,-5,0,9]\n",
+    "\n",
+    "def minimum(L):\n",
+    "    j= L[0]\n",
+    "    U= []\n",
+    "\n",
+    "    for i in range(0, len(L)-1):\n",
+    "        for i in range(0, len(L)-1):\n",
+    "            if L[i]< j:\n",
+    "                j=L[i]\n",
+    "                U.append(j)\n",
+    "                L.pop(i)\n",
+    "                print(U, L)\n",
+    "\n",
+    "    \n",
+    "    return U, L\n",
+    "minimum(test)\n",
     "\n",
     "\n"
    ]
@@ -418,17 +554,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 82,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[1, 45, -9, 78]"
+      ]
+     },
+     "execution_count": 82,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "def ajout(L, nb):\n",
+    "\n",
+    "    j= len(L)-1\n",
+    "    L.append(0)\n",
+    "    while j>=0 and L[j]> nb:\n",
+    "        L[j+1] = L[j]\n",
+    "        j-= 1\n",
+    "    L[j+1]= nb\n",
+    "    return L\n",
+    "\n",
+    "u=[1,45,-9]\n",
+    "\n",
+    "ajout(u, 78)\n",
     "\n",
     "\n"
    ]
@@ -676,7 +833,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.6"
   },
   "toc": {
    "base_numbering": 1,
