--- a/TD/TD1/td1_tableaux.ipynb
+++ b/TD/TD1/td1_tableaux.ipynb
@@ -419,7 +419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": null,
    "metadata": {
     "tags": [
      "answer"
@@ -427,42 +427,35 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-5] [2, 0, 9]\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
-       "([-5], [2, 0, 9])"
+       "[1, 2, 5, 5, 6, 9]"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "test= [2,-5,0,9]\n",
+    "L = [5, 2, 9, 1, 5, 6]\n",
     "\n",
-    "def minimum(L):\n",
-    "    j= L[0]\n",
-    "    U= []\n",
-    "\n",
-    "    for i in range(0, len(L)-1):\n",
-    "        for i in range(0, len(L)-1):\n",
-    "            if L[i]< j:\n",
-    "                j=L[i]\n",
-    "                U.append(j)\n",
-    "                L.pop(i)\n",
-    "                print(U, L)\n",
-    "\n",
+    "def tri_selection(l):\n",
     "    \n",
-    "    return U, L\n",
-    "minimum(test)\n",
+    "    for i in range(len(l)):\n",
+    "        min = i\n",
     "\n",
+    "        for j in range(i + 1, len(l)):\n",
+    "\n",
+    "            if l[j] < l[min]:\n",
+    "                min = j\n",
+    "\n",
+    "        l[i], l[min] = l[min], l[i]\n",
+    "\n",
+    "    return l\n",
+    "\n",
+    "\n",
+    "tri_selection(L)\n",
     "\n"
    ]
   },
@@ -524,18 +517,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 54,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[2, -5, 0, 9, 78]"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L= [2,-5,0,9]\n",
     "\n",
+    "def ajout(l, k):\n",
+    "    \"\"\"ajoute un truc au tableau\"\"\"\n",
+    "    l.append(k)\n",
+    "    return l\n",
+    "\n",
+    "ajout(L, 78)\n",
     "\n"
    ]
   },
@@ -554,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 52,
    "metadata": {
     "tags": [
      "answer"
@@ -567,12 +575,14 @@
        "[1, 45, -9, 78]"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "u=[1,45,-9]\n",
+    "\n",
     "def ajout(L, nb):\n",
     "\n",
     "    j= len(L)-1\n",
@@ -583,7 +593,6 @@
     "    L[j+1]= nb\n",
     "    return L\n",
     "\n",
-    "u=[1,45,-9]\n",
     "\n",
     "ajout(u, 78)\n",
     "\n",
@@ -650,19 +659,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 61,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[9, 7, 3, 6, 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L=[9, 7, 1, 3, 6, 0]\n",
     "\n",
-    "\n"
+    "def insertion_tableau(L, i):\n",
+    "\n",
+    "    if i < 0 or i > len(L):\n",
+    "        return\n",
+    "    \n",
+    "    U=[]\n",
+    "\n",
+    "    for k in range(0, i+1):\n",
+    "        U.append(L[k])\n",
+    "    U.pop()\n",
+    "\n",
+    "    for k in range(i+1, len(L)):\n",
+    "        U.append(L[k])\n",
+    "\n",
+    "    print(U)\n",
+    "\n",
+    "insertion_tableau(L, 2)"
    ]
   },
   {
@@ -680,17 +711,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 3, 6, 7, 9]\n",
+      "[0, 1, 6, 7, 9]\n"
+     ]
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L=[9, 7, 1, 3, 6, 0]\n",
+    "\n",
+    "def insertion_tableau(L, I):\n",
+    "\n",
+    "\n",
+    "    for i in range(len(L)):\n",
+    "        min = i\n",
+    "\n",
+    "        for j in range(i + 1, len(L)):\n",
+    "\n",
+    "            if L[j] < L[min]:\n",
+    "                min = j\n",
+    "\n",
+    "        L[i], L[min] = L[min], L[i]\n",
+    "\n",
+    "    print(L)\n",
+    "    l= list(L)\n",
+    "\n",
+    "    if I < 0 or I > len(l):\n",
+    "        return\n",
+    "    \n",
+    "    U=[]\n",
+    "\n",
+    "    for k in range(0, I+1):\n",
+    "        U.append(l[k])\n",
+    "    U.pop()\n",
+    "\n",
+    "    for k in range(I+1, len(l)):\n",
+    "        U.append(l[k])\n",
+    "\n",
+    "    print(U)\n",
+    "\n",
+    "insertion_tableau(L, 2)\n",
+    "\n",
+    "\n",
     "\n",
     "\n"
    ]
@@ -768,17 +840,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 84,
    "metadata": {
     "tags": [
      "answer"
     ]
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[12, 6, 4, 5, 6, 2, 3, 5, 9, 14]"
+      ]
+     },
+     "execution_count": 84,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "############################## \n",
-    "#   Saisir votre code ici.   #\n",
-    "##############################\n",
+    "L = [12, 6, 4, 5, 6, 2, 3, 5, 14, 9]\n",
+    "\n",
+    "def deplacer(l, k):\n",
+    "    a=0\n",
+    "    for i in range(len(l)):\n",
+    "\n",
+    "        if l[i] < k:\n",
+    "\n",
+    "            l[i], l[a] = l[a], l[i]\n",
+    "            a+= 1\n",
+    "        \n",
+    "\n",
+    "    return l\n",
+    "\n",
+    "\n",
+    "deplacer(L, 13)\n",
     "\n",
     "\n"
    ]
