--- a/TD/TD3/td_dict.ipynb
+++ b/TD/TD3/td_dict.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,38 +45,79 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Java', 'Algorithmique', [{'nom': 'Martin', 'prenom': 'Jean', 'Dept': '95'}, {'nom': 'Mohamed', 'prenom': 'Ali', 'Dept': '93'}, {'nom': 'Durand', 'prenom': 'Bertrand', 'Dept': '95'}]]\n"
+     ]
+    }
+   ],
    "source": [
-    "print(list(cours.values()))"
+    "print(list(cours.values()))\n",
+    "\n",
+    "# il sert à afficher toutes les valeurs associée au dictionnaire"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['nom cours', 'theme', 'etudiants']\n"
+     ]
+    }
+   ],
    "source": [
-    "print(list(cours))"
+    "print(list(cours))\n",
+    "\n",
+    "# affiche les différentes cléfs du dictionnaire"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Algorithmique\n"
+     ]
+    }
+   ],
    "source": [
-    "print(cours['theme'])"
+    "print(cours['theme'])\n",
+    "\n",
+    "# affiche la valeur associée à la cléf \"theme\""
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Martin\n"
+     ]
+    }
+   ],
    "source": [
     "tabE=cours['etudiants']\n",
     "etud= tabE[0]\n",
-    "print(etud['nom'])"
+    "print(etud['nom'])\n",
+    "\n",
+    "# associe à tabE l'indice associé à \"étudiant\", et à etud l'indice 0 de la liste tabE\n",
+    "# c'est un dictionnaire donc la valeur associée à \"nom\" est Martin"
    ]
   },
   {
@@ -97,13 +138,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'nom': 'Martin', 'prenom': 'Jean', 'Dept': '95'}, {'nom': 'Mohamed', 'prenom': 'Ali', 'Dept': '93'}, {'nom': 'Durand', 'prenom': 'Bertrand', 'Dept': '95'}]\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
+    "info = cours[\"etudiants\"]\n",
     "\n",
-    "\n"
+    "print(info)"
    ]
   },
   {
@@ -121,9 +168,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'nom': 'Mohamed', 'prenom': 'Ali', 'Dept': '93'}\n",
+      "93\n"
+     ]
+    }
+   ],
    "source": [
     "etds=cours['etudiants']\n",
     "tmp1=etds[1]\n",
@@ -156,9 +212,19 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "93\n"
+     ]
+    }
+   ],
    "source": [
-    "print (cours['etudiants'][1]['Dept'])"
+    "print (cours['etudiants'][1]['Dept'])\n",
+    "\n",
+    "# 93"
    ]
   },
   {
@@ -201,14 +267,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values([0, 0, 1, 2, 63, 61, 27, 11]) 2\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
+    "lunes = {\"mercure\":0, \"vénus\":0, \"terre\":1, \"mars\":2}\n",
+    "lunes[ \"jupiter\"] = 63\n",
+    "lunes[ \"saturne\"] = 61\n",
+    "lunes[ \"uranus\"] = 27\n",
+    "lunes[ \"neptune\"] = 11\n",
     "\n",
+    "\n",
+    "print(lunes.values(),\n",
+    "      lunes[\"mars\"])\n",
     "\n"
    ]
   },
@@ -234,13 +313,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La Terre à 1 satellite\n",
+      "mercure à 0 satellite(s)\n",
+      "vénus à 0 satellite(s)\n",
+      "terre à 1 satellite(s)\n",
+      "mars à 2 satellite(s)\n",
+      "jupiter à 63 satellite(s)\n",
+      "saturne à 61 satellite(s)\n",
+      "uranus à 27 satellite(s)\n",
+      "neptune à 13 satellite(s)\n",
+      "il y a 167 lunes dans le système Solaire\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
+    "lunes[\"neptune\"] = 13\n",
+    "print(f\"La Terre à {lunes[\"terre\"]} satellite\")\n",
+    "planete = list(lunes)\n",
+    "lune = list(lunes.values())\n",
+    "\n",
+    "for i in range(len(planete)):\n",
+    "    print(f\"{planete[i]} à {lune[i]} satellite(s)\")\n",
+    "\n",
+    "tot = 0\n",
+    "\n",
+    "for i in range(len(lunes)):\n",
+    "    tot += lune[i]\n",
+    "\n",
+    "print(f\"il y a {tot} lunes dans le système Solaire\")\n",
     "\n",
     "\n"
    ]
@@ -288,11 +395,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'prix': 45.0, 'quantité': 124, 'couleur': 'blue'}"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
+    "stock = {}\n",
+    "\n",
+    "def ajout_ref():\n",
+    "    global stock\n",
+    "    stock[\"prix\"] = float(input(\"Entrer le prix (float):\"))\n",
+    "    stock[\"quantité\"] = int(input(\"Entrer la quantité (int):\"))\n",
+    "    stock[\"couleur\"] = input(\"Entrer la couleur (str):\")\n",
+    "    return stock\n",
+    "\n",
+    "ajout_ref()\n",
+    "    \n",
+    "    \n",
     "\n",
     "\n"
    ]
@@ -316,12 +443,31 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'prix': 45.0, 'quantité': 2, 'couleur': 'red'}, {'prix': 10.0, 'quantité': 3, 'couleur': 'derf'}]\n",
+      "le prix total est de 120.0€\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
+    "cmb = int(input(\"entrer le nombre de d'items diff\"))\n",
+    "total = []\n",
+    "prix = 0\n",
     "\n",
+    "\n",
+    "for i in range(cmb):\n",
+    "    stock = {}\n",
+    "    ajout_ref()\n",
+    "    total.append(stock)\n",
+    "for i in range(len(total)):\n",
+    "    prix += total[i][\"prix\"] * total[i][\"quantité\"]\n",
+    "\n",
+    "print(total)\n",
+    "print(f\"le prix total est de {prix}€\")\n",
     "\n"
    ]
   },
@@ -351,14 +497,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n",
-    "\n"
+    "mots = {}\n",
+    "\n",
+    "for i in range(5):\n",
+    "    tuile = input(\"entrer un mot en français\")\n",
+    "    mots[tuile] = input(\"entrer sa traduction\")\n"
    ]
   },
   {
@@ -377,11 +524,23 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'maison': 'house', 'two': 'deux', 'merde': 'shit', 'construire': 'build', 'bizarre': 'strange', 'haut': 'up'}\n"
+     ]
+    }
+   ],
    "source": [
-    "#-------------------------#\n",
-    "#    Écrire le code ici   #\n",
-    "#-------------------------#\n"
+    "def ajout(mot1, mot2, dico):\n",
+    "\n",
+    "    if mot1 in dico == False:\n",
+    "        dico[mot1] = mot2\n",
+    "\n",
+    "ajout(\"haut\", \"up\", mots)\n",
+    "print(mots)"
    ]
   },
   {
@@ -502,7 +661,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.12.6"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
