--- a/TD/TD4/td_file.ipynb
+++ b/TD/TD4/td_file.ipynb
@@ -178,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 77,
    "metadata": {},
    "outputs": [
     {
@@ -223,9 +223,10 @@
     "\n",
     "stats = open(\".\\\\files\\\\statistiques.json\", \"w\")\n",
     "\n",
-    "json.dump(freq, stats)\n",
-    "json.dump(stat, stats)\n",
+    "json.dump(freq, stats, indent=4)\n",
+    "json.dump(stat, stats, indent=4)\n",
     "\n",
+    "stats.close()\n",
     "print(freq)\n",
     "print(stat)\n",
     "print(nb)\n",
